--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,33 +1,34 @@
-name: Unit Tests
-
-on: [pull_request, push]
-
+name: Build WDA IPA
+on: [workflow_dispatch]
 
 jobs:
-  prepare_matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      versions: ${{ steps.generate-matrix.outputs.lts }}
-    steps:
-    - name: Select all current LTS versions of Node.js
-      id: generate-matrix
-      uses: msimerson/node-lts-versions@v1
-
-  test:
-    needs:
-    - prepare_matrix
-    strategy:
-      matrix:
-        node-version: ${{ fromJSON(needs.prepare_matrix.outputs.versions) }}
+  build:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install --no-package-lock
-      name: Install dev dependencies
-    - run: npm run lint
-      name: Run linter
-    - run: npm run test
-      name: Run unit tests
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: brew install carthage
+
+      - name: Build WebDriverAgent IPA
+        run: |
+          xcodebuild -project WebDriverAgent.xcodeproj \
+                     -scheme WebDriverAgentRunner \
+                     -sdk iphoneos \
+                     -configuration Release \
+                     archive -archivePath build/WDA.xcarchive \
+                     DEVELOPMENT_TEAM="" CODE_SIGN_IDENTITY="" CODE_SIGNING_ALLOWED=NO
+
+          mkdir -p build/ipa
+          # Empaquetar en IPA
+          xcodebuild -exportArchive \
+                     -archivePath build/WDA.xcarchive \
+                     -exportPath build/ipa \
+                     -exportOptionsPlist ExportOptions.plist || true
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: WebDriverAgent-IPA
+          path: build/ipa
